Made a lot of progress on my styles sheet for my interests. Looks so much better. Had a huge bug I squashed.

--- a/biostyle.css
+++ b/biostyle.css
@@ -25,11 +25,6 @@ body {
   background-color: #6B5D4D;
 }
 
-.navbar a.active {
-  background-color: #429398;
-  color: white;
-}
-
 div.topbar {
   overflow: hidden;
   text-align: center;
@@ -55,17 +50,54 @@ div.topbar {
   https://www.w3schools.com/css/css3_borders.asp*/
 }
 
-img {
-  width: 300px;
-  height: 200px;
+.content::after{
+  content: "";
+  clear: both;
+  display: table;
+  /*this puppy was my holy grail I finally figured out how to keep my columns
+  inside of it's parent div I got this from here:
+  https://www.w3schools.com/css/css_rwd_grid.asp*/
 }
 
-img + .navbar a {
-  padding: 10px 20px;
-  font-size: 100%;
-
-}
-
-div.content > div {
+.column{
+  width: 50%;
   float: left;
+  position: relative;
+}
+
+#pics {
+  max-width: 80%;
+  height: auto;
+  display: block;
+}
+
+.source {
+  color: white;
+  position: absolute;
+  bottom: 60px;
+  right: 25%;
+  /* I know I cheesed this but I think it looks good this way. I got the idea
+  from: https://www.w3schools.com/css/css3_images.asp */
+}
+
+.source a {
+  color: white;
+}
+
+.gallery {
+background-color: #B0A18F;
+max-width: 80%;
+text-align: center;
+}
+
+.gallery a {
+  padding: 10px 20px;
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.gallery a:hover {
+  color: white;
+  background-color: #6B5D4D;
 }
